Fix layout bug.

--- a/ui/index.scss
+++ b/ui/index.scss
@@ -66,7 +66,7 @@ header {
 
   &::after {
     @include header-shadow;
-    margin-top: 2.5em;
+    top: 2.5em;
   }
 
   background: $header-background;
